syntax = "proto3";

option java_package = "com.piggy.microservice.statistics.grpc";
option java_outer_classname = "StatisticsProto";

service StatisticsService {
  rpc GetCurrentAccountStatistics (AccountRequest) returns (AccountStatisticsResponse);
  rpc UpdateAccountStatistics (UpdateAccountRequest) returns (UpdateAccountResponse);
}

message AccountRequest {
  string name = 1;
}

message AccountStatisticsResponse {
  repeated DataPoint data_points = 1;
}

message Item {
  string title = 1;
  string amount = 2; // Represent BigDecimal as string
  Currency currency = 3;
  TimePeriod period = 4;
}

message Saving {
  string amount = 1; // Represent BigDecimal as string
  Currency currency = 2;
  string interest = 3; // Represent BigDecimal as string
  bool deposit = 4;
  bool capitalization = 5;
}

enum Currency {
  USD = 0;
  EUR = 1;
  RUB = 2;
}

enum TimePeriod {
  YEAR = 0;
  QUARTER = 1;
  MONTH = 2;
  DAY = 3;
  HOUR = 4;
}

enum StatisticMetric {
  INCOMES_AMOUNT = 0;
  EXPENSES_AMOUNT = 1;
  SAVING_AMOUNT = 2;
}

message StatisticEntry {
  StatisticMetric metric = 1;
  string value = 2;
}

message CurrencyEntry {
  Currency currency = 1;
  string rate = 2; // Represent BigDecimal as string
}

message DataPointId {
  string account = 1;
  string date = 2;
}

message DataPoint {
  DataPointId id = 1;
  repeated Item incomes = 2;
  repeated Item expenses = 3;
}

message UpdateAccount {
  repeated Item incomes = 1;
  repeated Item expenses = 2;
  Saving saving = 3;
}
message UpdateAccountRequest {
  string name = 1;
  UpdateAccount update = 2;

}

message UpdateAccountResponse {
  string message = 1;
}
